# Sedighe-autora-theorist-example-theorist

./: mkdocs.yml  pyproject.toml
src/autora/theorist/example_theorist/: __init__.py
