[project]
# UPDATE THIS BEFORE PUBLISHING
name = "my-awesome-theorist"
description = "test"
authors = [{ name = "Younes Strittmatter", email = "ystrittmatter@gmx.de" }]
dynamic = ["version"]

readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8,<4"

# ADD NEW DEPENDENCIES HERE
dependencies = [
    "autora-core",
    "scikit-learn",
    "pandas",
    "sympy"
]

[project.optional-dependencies]
dev = [
    "autora-core[dev]"
]

[project.urls]
homepage = "http://www.empiricalresearch.ai"
repository = "https://github.com/younesStrittmatter/autora-theorist-example-theorist"
documentation = "https://autoresearch.github.io/autora/"


[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
